@@ -3,6 +3,7 @@ Version: 1.2.2
 Date: ????
   Features:
     - Add preset for Nullius (Thanks to Anachrony's help).
+    - Add preset addons for Cargo Ships, Spidertron Extended, Spidertron Tiers
   Changes:
     - Tweaks to various presets, most notably for Sea Block.
 ---------------------------------------------------------------------------------------------------
